--- a/assignment_.ipynb
+++ b/assignment_.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "'Forecasting outcomes in anti-NMDAR encephalitis'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "'Clearer prognostic markers needed'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
        "'Stephan Rüegg, E. Ann Yeh, Jerome Honnorat'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "'http://n.neurology.org/content/early/2018/12/21/WNL.0000000000006766'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        " 'http://n.neurology.org/content/early/2018/12/21/WNL.0000000000006766']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,8 +1019,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 데이터 정리"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = [date,title,sub_title,author,article_url]\n",
+    "def article(date,title,sub_title,author,article_url):\n",
+    "    for  in ul :\n",
+    "        titles = ul.find('span',attrs={'class':'highwire-cite-title'})\n",
+    "        sub_titles = ul.find('span',attrs={'class':'highwire-cite-subtitle'})\n",
+    "        author = ul.find('span',attrs={'class':'highwire-citation-authors'})\n",
+    "        article_url = home_url + ul.find('a')['href']\n",
+    "    result = result.append()\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "article() missing 4 required positional arguments: 'title', 'sub_title', 'author', and 'article_url'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-115-3ddd3d95df6f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0marticle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: article() missing 4 required positional arguments: 'title', 'sub_title', 'author', and 'article_url'"
+     ]
+    }
+   ],
+   "source": [
+    "article(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "????????????????????????"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,35 +1089,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(info)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "????????????????????????"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
